2001-07-16  Zbigniew Chyla  <cyba@gnome.pl>

	* src/file-priv.h
	(struct _GnumFileSaver): Removed save_to_stream_func member.
	(gnum_file_saver_setup): Removed save_to_stream_func argument.

	* src/file.h
	(gnum_file_saver_new): Removed save_to_stream_func argument.
	(gnum_file_saver_supports_save_to_stream): Removed.

	* src/file.c
	(gnum_file_saver_save_to_stream_real):
	New implementation, uses temporary file and gnum_file_saver_save.
	(gnum_file_saver_setup): Removed save_to_stream_func argument.
	(gnum_file_saver_new): Removed save_to_stream_func argument.
	(gnum_file_saver_supports_save_to_stream): Removed.

	* src/gui-file.c
	(ask_for_file_saver): Show all file savers in format chooser.

	* src/bonobo-io.c (gnumeric_bonobo_io_init),
	src/plugin-service.c (gnum_plugin_file_saver_new),
	src/stf.c (stf_init):
	Adjusted to file.h change (removed save_to_stream_func argument).

	* src/xml-io.c
	(gnumeric_xml_write_workbook_to_stream): Removed.
	(xml_init): Adjusted to file.h change.

2001-07-16  Almer S. Tigelaar  <almer@gnome.org>

	* stf-parse.c (stf_parse_general): Fix leakage.

2001-07-15  Zbigniew Chyla  <cyba@gnome.pl>

	* src/gnumeric-util.c (gnumeric_create_popup_menu): Fixed problem with
	keyboard navigation in popup menus ("empty" items not skipped). Now
	such items are insensitive.

2001-07-15  Zbigniew Chyla  <cyba@gnome.pl>

	* src/workbook-control-gui.c: Added comment above send_menu_item and
	send_menu_item_i18n strings about keeping them in sync.

2001-07-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
2001-07-15  Almer S. Tigelaar  <almer@gnome.org>

	* stf.c (stf_read_workbook): Honor lines to parse.

	* gui-clipboard.c (x_selection_to_cell_region): Idem.

	* stf-parse.c (stf_parse_options_set_lines_to_parse): Don't
	convert to index it's not an index.

2001-07-15  Andreas J. Guelzo  <aguelzow@math.concordia.ab.ca>

	* src/analysis-tools.c (anova_two_factor_with_r_tool): Finish
 	implementation.
